<resources>
    <string name="app_name">WizzMate</string>
    <string name="description_app">Intelligent Travel Guide and Cost Estimator for Tourisme in Indonesia</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_account">Don’t have an account? Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Enter your password again</string>
    <string name="name">Name</string>
    <string name="term_description">By creating an account or signing  in, you agree to our Terms of Services and Privacy Policy</string>
    <string name="home">Home</string>
    <string name="cost_estimator">Cost Estimator</string>
    <string name="history">History</string>
    <string name="search">Hint</string>
    <string name="recommendation">Recommendation</string>
    <string name="estimate_cost">Estimate Your Cost</string>
    <string name="user_name">Username</string>
    <string name="user_location">User Location</string>
    <string name="destination_name">destination name</string>
    <string name="destination_location">Location</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in_your_account">Sign in to Your Account</string>
    <string name="dont_have_account">Don’t have an account? Sign Up</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="sign_up_your_account">Sign up Your Account</string>
    <string name="destination_rating">5.0</string>
    <string name="destination_description">Description</string>
    <string name="destination_category">category</string>
    <string name="destination_category_label">Category :</string>
    <string name="your_journey">Your Journey</string>
    <string name="budaya">Budaya</string>
    <string name="taman_hiburan">Taman Hiburan</string>
    <string name="cagar_alam">Cagar Alam</string>
    <string name="tempat_ibadah">Tempat Ibadah</string>
    <string name="pusat_perbelanjaan">Pusat Perbelanjaan</string>
    <string name="bahari">Bahari</string>
    <string name="cari_lokasi">Find Location</string>
    <string name="cost_estimator_recomendation"><![CDATA[Cost Estimator & Recomendation]]></string>
    <string name="titik_awal">Departure</string>
    <string name="hari_pertama">First Day</string>
    <string name="hari_terakhir">Last Day</string>
    <string name="budget">Your Budget</string>
    <string name="jumlah_hari">0 Day</string>
    <string name="tujuan">Your Destination</string>
    <string name="reset">reset</string>
    <string name="maps">maps</string>
    <string name="comming_soon">This Feature is Comming Up Soon</string>
    <string name="result_title">Recommendation Result</string>
    <string name="rekomendasi_tempat_terdekat">Destination Recommendation</string>
    <string name="kemungkinan_total_budget">Budget Estimated</string>
    <string name="duration">Duration</string>
    <string name="flight_recommendation">Flight Recommendation</string>
    <string name="no_flight_recommendation">No Flight Recommendation</string>
    <string-array name="departure">
        <item>Jakarta</item>
        <item>Yogyakarta</item>
        <item>Semarang</item>
        <item>Surabaya</item>
        <item>Singapore</item>
        <item>Palembang</item>
        <item>Balikpapan</item>
        <item>Merauke</item>
        <item>Jakarta (Halim Perdanakusuma)</item>
        <item>Banjarmasin</item>
        <item>Jayapura</item>
        <item>Denpasar</item>
        <item>Makassar</item>
    </string-array>
    <string-array name="kota_tujuan">
        <item>Jakarta</item>
        <item>Yogyakarta</item>
        <item>Semarang</item>
        <item>Surabaya</item>
        <item>Bandung</item>
    </string-array>
</resources>